icon-share needed a vertical alignment correction

--- a/src/less/fonts/font-awesome.less
+++ b/src/less/fonts/font-awesome.less
@@ -59,6 +59,10 @@
   vertical-align: -2%;
 }
 
+.icon-share.icon-large:before {
+  vertical-align: -16%;
+}
+
 .icon-flag.icon-large:before {
   margin-left: -1px;
 }
